--- a/app/src/main/res/layout/fragment_contacts_book.xml
+++ b/app/src/main/res/layout/fragment_contacts_book.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.vocsy.fakecall.newFakeCall.Fragments.ContactsBookFragment">
+    tools:context="com.vocsy.fakecall.ui.ContactsBookFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
