--- a/app/src/main/res/layout/new_bottomsheet_call_layout.xml
+++ b/app/src/main/res/layout/new_bottomsheet_call_layout.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/transparent">
 
 
@@ -11,9 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/ovel_background"
-        android:paddingTop="130dp"
         android:orientation="vertical"
-        >
+        android:paddingTop="130dp">
+
         <TextView
             android:id="@+id/personName"
             android:layout_width="match_parent"
@@ -23,115 +22,111 @@
             android:paddingRight="20dp"
             android:text="Saad Meeg"
             android:textColor="#000000"
-            android:textSize="27sp"
-            />
+            android:textSize="27sp" />
 
         <TextView
             android:id="@+id/personNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
             android:gravity="center"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="+91 93562 25648"
             android:textColor="#000000"
-            android:textSize="16sp"
-            android:layout_marginTop="3dp"
-            />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="horizontal"
-        android:weightSum="4"
-        android:layout_marginTop="10dp"
-        >
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            ></LinearLayout>
-        <LinearLayout
-            android:id="@+id/favouriteLay"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            >
-            <ImageView
-                android:id="@+id/favouriteIV"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_without_fill_favourite"
-                android:layout_weight="1"
-                android:padding="10dp"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Favourite"
-                android:textSize="13dp"
-                android:layout_weight="4"
-                android:gravity="center"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/editContactIV"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            >
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_edit_contact"
-                android:layout_weight="1"
-                android:padding="10dp"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Edit"
-                android:textSize="13dp"
-                android:layout_weight="4"
-                android:gravity="center"
-                />
-        </LinearLayout>
-
-
-    </LinearLayout>
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:orientation="horizontal"
-            android:weightSum="4"
             android:layout_marginTop="10dp"
-            >
+            android:orientation="horizontal"
+            android:weightSum="4">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"></LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/favouriteLay"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/favouriteIV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_without_fill_favourite" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:gravity="center"
+                    android:text="Favourite"
+                    android:textSize="13dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/editContactIV"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_edit_contact" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:gravity="center"
+                    android:text="Edit"
+                    android:textSize="13dp" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:weightSum="4">
 
             <LinearLayout
                 android:id="@+id/personCallLay"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_audio_call"
                     android:layout_weight="1"
                     android:padding="10dp"
-                    />
+                    android:src="@drawable/ic_audio_call" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Call"
-                    android:textSize="13dp"
                     android:layout_weight="4"
                     android:gravity="center"
-                    />
+                    android:text="Call"
+                    android:textSize="13dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -139,23 +134,22 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_video_call"
                     android:layout_weight="1"
                     android:padding="10dp"
-                    />
+                    android:src="@drawable/ic_video_call" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Video Call"
-                    android:textSize="13dp"
                     android:layout_weight="4"
                     android:gravity="center"
-                    />
+                    android:text="Video Call"
+                    android:textSize="13dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -163,51 +157,51 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_timer"
                     android:layout_weight="1"
                     android:padding="10dp"
-                    />
+                    android:src="@drawable/ic_timer" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Timer"
-                    android:textSize="13dp"
                     android:layout_weight="4"
                     android:gravity="center"
-                    />
+                    android:text="Timer"
+                    android:textSize="13dp" />
             </LinearLayout>
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="25dp"
-            android:orientation="horizontal"
             android:layout_marginTop="15dp"
             android:gravity="center_vertical"
-            >
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Recent"
-                android:textSize="17dp"
+                android:layout_marginLeft="30dp"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:layout_marginLeft="30dp"
+                android:text="Recent"
                 android:textColor="@color/black"
-                />
+                android:textSize="17dp" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="@color/black"
-                android:layout_weight="1"
                 android:layout_marginLeft="15dp"
-                />
+                android:layout_weight="1"
+                android:background="@color/black" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="122.0dip"
@@ -229,16 +223,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            tools:listitem="@layout/history_item"
-            />
+            tools:listitem="@layout/item_recent" />
     </LinearLayout>
 
-    <com.vocsy.fakecall.CircleImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/personImage"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:src="@drawable/dragon"
         android:layout_centerHorizontal="true"
-        />
+        android:src="@drawable/dragon" />
 
 </RelativeLayout>
